// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Genres logic renders genres dropdown close 1`] = `
<div>
  <button
    className="moviesGrid_categories_item_button"
    data-filter="Genres"
    id="Genres"
    onClick={[Function]}
    style={
      Object {
        "borderBottom": "none",
      }
    }
    type="button"
  >
    <span>
      Genres
    </span>
    <span
      className=" moviesGrid_categories_item_span_arrow"
    />
  </button>
  <div
    className=" moviesGrid_categories_item_block"
    id="genres_list"
  >
    <a
      href="/genres?genreName=adventure&genreId=1"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <button
        className="moviesGrid_categories_item_block_button"
        elem="adventure"
        id="adventure"
        onClick={[Function]}
        type="button"
      >
        adventure
      </button>
    </a>
    <a
      href="/genres?genreName=action&genreId=2"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <button
        className="moviesGrid_categories_item_block_button"
        elem="action"
        id="action"
        onClick={[Function]}
        type="button"
      >
        action
      </button>
    </a>
    <a
      href="/genres?genreName=drama&genreId=3"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <button
        className="moviesGrid_categories_item_block_button"
        elem="drama"
        id="drama"
        onClick={[Function]}
        type="button"
      >
        drama
      </button>
    </a>
  </div>
</div>
`;

exports[`Genres logic renders genres dropdown open 1`] = `
<div>
  <button
    className="moviesGrid_categories_item_button"
    data-filter="Genres"
    id="Genres"
    onClick={[Function]}
    style={
      Object {
        "borderBottom": "4px solid",
      }
    }
    type="button"
  >
    <span>
      Genres
    </span>
    <span
      className="active moviesGrid_categories_item_span_arrow"
    />
  </button>
  <div
    className="active moviesGrid_categories_item_block"
    id="genres_list"
  >
    <a
      href="/genres?genreName=adventure&genreId=1"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <button
        className="moviesGrid_categories_item_block_button"
        elem="adventure"
        id="adventure"
        onClick={[Function]}
        type="button"
      >
        adventure
      </button>
    </a>
    <a
      href="/genres?genreName=action&genreId=2"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <button
        className="moviesGrid_categories_item_block_button"
        elem="action"
        id="action"
        onClick={[Function]}
        type="button"
      >
        action
      </button>
    </a>
    <a
      href="/genres?genreName=drama&genreId=3"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <button
        className="moviesGrid_categories_item_block_button"
        elem="drama"
        id="drama"
        onClick={[Function]}
        type="button"
      >
        drama
      </button>
    </a>
  </div>
</div>
`;

exports[`GenresNavLink Snapshot renders 1`] = `
<MemoryRouter
  location={
    Object {
      "pathname": "/genres",
      "search": "/genres?genreName=Action&genreId=1",
    }
  }
>
  <withRouter(Connect(Genres))
    activeCategory="Trending"
    fetchChange={[Function]}
    fetchFilmsByGenre={[Function]}
    title="Genres"
  />
</MemoryRouter>
`;

exports[`GenresNavLink Snapshot renders 2`] = `
<withRouter(Connect(Genres))
  activeCategory="Genres"
  fetchChange={[Function]}
  fetchFilmsByGenre={[Function]}
  title="Genres"
/>
`;
